--- a/locale/en/PlacementGuide.cfg
+++ b/locale/en/PlacementGuide.cfg
@@ -10,3 +10,9 @@ pg-guide=If you are seeing this, turn back now! This item is never meant to be s
 [pg-message]
 item-has-no-entity=Item has no entity
 unsupported-entity=Unsupported entity
+
+[mod-setting-name]
+placement-guide-min-guide-margin=Guide Margin Size
+
+[mod-setting-description]
+placement-guide-min-guide-margin=The minimum margin size around placement guides.
